tests/parser/syntax-errors/unexpected-indentation/unexpected_indentation_def.choc
# RUN: choco-opt "%s" | filecheck "%s"

  a : int = 0

# CHECK:      SyntaxError (line 3, column 1): Unexpected indentation.
# CHECK-NEXT: >>>  a : int = 0
# CHECK-NEXT: >>>^
